CMS _overflow_list is missing volatile specifiers.

XMLWordPrintable

    • gc
    • b140
    • generic
    • generic

      In CMS, the _overflow_list which is part of a lock-free protocol is being manipulated without volatile specifier.

      This leads to less robust behavior, and using volatiles is preferred.

      This is related to JDK-8033552, but was split out to a separate CR, because that one was a bit too long.

            Assignee:
            Erik Ă–sterlund
            Reporter:
            Erik Ă–sterlund
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: